[tool.poetry]
name = "isabl-job-opt"
version = "0.1.0"
description = "A Python package to simplify job resource optimization for Isabl Apps."
authors = ["Andrew Moorman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
